Fixed jump button height

--- a/assets/sass/_classes.scss
+++ b/assets/sass/_classes.scss
@@ -36,9 +36,7 @@
   background: $primary;
   color: #FFF;
   float: left;
-  font-size: 17px;
   margin: 0 0 0 10px;
-  padding: 3px 8px 4px;
 
   &:hover { background: $secondary; }
 }
