--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -17,9 +17,9 @@
   }
 
   .button-jump-top {
-    font-size: 23px;
-    line-height: 1;
-    padding-top: 1px;
+    font-size: 20px;
+    height: 27px;
+    width: 27px;
   }
 }
 
